--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,22 @@
 .App {
-  text-align: center;
+  display: grid;
+  grid-template-rows: auto 1fr;
+  min-height: 100vh;
+}
+
+.container {
+  display: grid;
+  grid-template-columns: 350px 1fr;
+  grid-gap: 20px;
+}
+
+.perfil {
+  grid-row: 1 / span 2;
+}
+
+.content {
+  display: grid;
+  align-content: center;
 }
 
 html {
