--- a/src/components/skills/Skills.module.css
+++ b/src/components/skills/Skills.module.css
@@ -15,6 +15,16 @@
 }
 
 .item img {
-    width: 170px;
-    height: 170px
+    width: 100%;
+    height: auto;
+}
+
+h1 {
+    text-align: center;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 39px;
+    color: #66FDF1;
 }
