--- a/src/components/experience/Experience.module.css
+++ b/src/components/experience/Experience.module.css
@@ -26,8 +26,23 @@
 }
 
 .content {
-    margin: 5px;   
+    margin: 5px;
 }
+
+.link {
+    text-decoration: none;
+    background: #66FDF1;
+    font-family: 'Inter';
+    font-style: normal;
+    border: none;
+    color: #202833;
+    transition: background-color 0.3s ease;
+}
+
+.link:hover {
+    background-color: #3dc8ba;
+}
+
 
 h1 {
     text-align: center;
