--- a/src/components/experience/Experience.module.css
+++ b/src/components/experience/Experience.module.css
@@ -1,77 +1,103 @@
-.container {
-    display: grid;
-    grid-template-columns: 25% 75%;
-    width: 90%;
-    background: #202833;
-    border-radius: 50px;
-    margin-bottom: 20px;
+.containerItem {
+    display: flex;
+    justify-content: center;
+    height: 100vh;
+    background: #ffffff;
 }
 
-.image {
+.btnItem {
+    display: inline-block;
+    border-radius: 3px;
+    font-size: 14px;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    color: #2e8e9c;
+}
+
+.btnItem span {
+    font-size: 2em;
+}
+
+.descriptionContainer{
+    width: 50%;
+    background: #ffffff;
+
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.title {
+    position: relative;
+    top: 100px;
+}
+
+.btnContainer {
+    display: flex;
+    position: relative;
+    bottom: 100px;
+    justify-content: center;
+}
+
+.imgContent {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.image img {
+.imgContent img {
     display: block;
-    max-width: 100%;
-    max-height: 100%;
+    max-width: 90%;
+    max-height: 90%;
     object-fit: cover;
     object-position: center;
 }
 
-.imgContent {
-    width: 50%;
-}
-
-.content {
-    margin: 5px;
-}
-
 .link {
-    text-decoration: none;
-    background: #66FDF1;
-    font-family: 'Inter';
-    font-style: normal;
+    background: none;
     border: none;
-    color: #202833;
-    transition: background-color 0.3s ease;
+    border-radius: 3px;
+    font-family: 'Inter', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 13px;
+    line-height: 24px;
+    color: #ececec;
+    cursor: pointer;
+    margin-right: 20px;
+    background: #2e8e9c;
+    transition: transform 0.3s ease, background-color 0.3s ease;
+    display: inline-block;
+    padding: 6px 10px;
+    text-decoration: none;
+    outline: none;
 }
 
 .link:hover {
-    background-color: #3dc8ba;
+    transform: scale(1.05);
+    background-color: #4894a0;
 }
 
-
-h1 {
-    text-align: center;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 32px;
-    line-height: 39px;
-    color: #66FDF1;
-}
-
-h2 {
+.content h2 {
     font-family: 'Inter';
     font-style: normal;
     font-weight: 700;
     font-size: 22px;
     line-height: 27px;
-    color: #66FDF1;
+    color: #141010;
 }
 
-h3,
-p {
+.content p {
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
-    font-size: 16px;
-    line-height: 19px;
+    font-size: 18px;
+    line-height: 22px;
+    color: #141010;
     display: flex;
     align-items: center;
-
-    color: #FFFFFF;
 }
