--- a/src/components/navbar/NavBar.module.css
+++ b/src/components/navbar/NavBar.module.css
@@ -1,10 +1,8 @@
 .container {
     position: relative;
-    width: 970px;
+    width: auto;
     height: 70px;
-    margin: 30px auto;
-    background: #202833;
-    border-radius: 50px;
+    background: transparent;
     display: flex;
     align-items: center;
     padding: 0 20px;
@@ -13,12 +11,12 @@
 .links {
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: flex-end;
     flex-grow: 1;
 }
 
-.links Link {
-    margin-left: 20px;
+.links a {
+    margin-left: 40px;
     color: #ffffff;
     text-decoration: none;
     font-family: 'Inter';
@@ -29,11 +27,11 @@
     position: relative;
 }
 
-.links Link:hover {
+.links a:hover {
     text-decoration: none;
 }
 
-.links Link:hover::after {
+.links a:hover::after {
     content: "";
     position: absolute;
     left: 0;
@@ -43,25 +41,16 @@
     background-color: #ffffff;
 }
 
-.profilePicture {
+
+.nameLink {
+    color: #ffffff;
+    font-size: 24px;
+    text-decoration: none;
     position: relative;
-    width: 50px;
-    height: 50px;
-    left: -15px;
-    border-radius: 50%;
-    background-color: #ffffff;
-    margin-right: 20px;
+    width: 150px;
+    height: 40px;
     display: flex;
     align-items: center;
     justify-content: center;
-    overflow: hidden;
-    border: 4px solid #202833;
-    box-shadow: 0px 0px 0px 2px #66FDF1;
-}
-
-.profilePicture img {
-    display: block;
-    width: 100%;
-    height: auto;
-    object-fit: cover;
+    border: 2px solid #ffffff;
 }
