--- a/src/components/perfil/Perfil.module.css
+++ b/src/components/perfil/Perfil.module.css
@@ -1,19 +1,119 @@
 .container {
     display: flex;
-    flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
     position: relative;
-    left: 50px;
-    width: 260px;
+    width: 100%;
+    height: 100vh;
+    margin: 0 auto;
+    background: #ffffff;
+}
+
+.title {
+    text-align: center;
+    margin: 0 auto;
+    position: relative;
+    top: 100px;
+    z-index: 1;
+}
+
+.contactItem {
+    justify-content: center;
+    padding: 20px;
+    text-decoration: none;
+    transition: color 0.3s ease;
+    display: flex;
+    align-items: center;
+    color: #2e8e9c;
+}
+
+.contactItem:hover {
+    color: #636363;
+}
+
+.icon {
+    margin-right: 10px;
+    color: #2e8e9c;
+}
+
+.content {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.neonShapes {
+    position: absolute;
+    top: 220px;
+    left: 185px;
+    width: 30%;
+    height: 39%;
+    overflow: hidden;
+    border-radius: 3%;
+}
+
+.neonShapes::before {
+    content: '';
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 50%;
+    height: 10px;
+    background-color: #2e8e9c;
+    box-shadow: 0 0 15px #5c9ba5;
+}
+
+.neonShapes::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 100%;
+    width: 10px;
+    height: 100%;
+    background-color: #2e8e9c;
+    box-shadow: 0 0 15px #5c9ba5;
+}
+
+.neonInverted {
+    position: absolute;
+    top: 155px;
+    left: 760px;
+    width: 25%;
+    height: 30%;
+    overflow: hidden;
+    border-radius: 3%;
+}
+
+.neonInverted::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 100%;
+    width: 100%;
+    height: 100%;
+    background-color: #2e8e9c;
+    box-shadow: 0 0 15px #5c9ba5;
+}
+
+.neonInverted::after {
+    content: '';
+    position: absolute;
+    top: -6%;
+    right: -80px;
+    width: 100%;
+    height: 10px;
+    background-color: #2e8e9c;
+    box-shadow: 0 0 15px #5c9ba5;
 }
 
 .picture {
-    width: 260px;
-    height: 260px;
-    margin-bottom: 10px;
+    width: 200px;
+    height: 250px;
+    margin-right: 15px;
     overflow: hidden;
-    border-radius: 10%;
+    border-radius: 3%;
 }
 
 .picture img {
@@ -25,34 +125,41 @@
 }
 
 .description {
-    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    width: 50%;
+    height: 270px;
+    text-align: justify;
+}
+
+.description p {
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
     line-height: 22px;
-    color: #FFFFFF;
-    margin-bottom: 10px;
-    text-align: center;
+    color: #141010;
+    z-index: 1;
 }
 
 .btn {
-    width: 100%;
-    height: 70px;
-    background: #66FDF1;
-    border-radius: 500px;
+    background: #2e8e9c;
+    border-radius: 5px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 700;
-    font-size: 22px;
-    line-height: 27px;
+    font-size: 15px;
+    line-height: 30px;
     border: none;
-    color: #202833;
+    color: #ececec;
     cursor: pointer;
-    transition: background-color 0.3s ease, transform 0.3s ease;
+    transition: transform 0.3s ease, background-color 0.3s ease;
+    z-index: 1;
 }
 
 .btn:hover {
-    background-color: #3dc8ba;
+    background-color: #4894a0;
     transform: scale(0.95);
 }
