Style fixed and responsive started

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
 .App {
   min-height: 100vh;
-  background: linear-gradient(to right, #aa4b6b, #6b6b83, #3b8d99);
+ 
+}
+
+.wrapper{
+  background: #3b8d99;
+
 }
 
 .perfil {
