--- a/src/components/experience/Experience.module.css
+++ b/src/components/experience/Experience.module.css
@@ -3,6 +3,7 @@
     justify-content: center;
     height: 100vh;
     background: #ffffff;
+    margin: 0 10px 0 10px;
 }
 
 .btnItem {
@@ -29,6 +30,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 100%;
 }
 
 .title {
@@ -47,6 +49,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 100%;
 }
 
 .imgContent img {
@@ -101,3 +104,30 @@
     display: flex;
     align-items: center;
 }
+
+@media only screen and (max-width: 767px) {
+    .containerItem {
+   
+    }
+  
+    .descriptionContainer {
+     
+    }
+  
+    .imgContent {
+     
+    }
+  
+    .imgContent img {
+   
+    }
+
+    .btnContainer{
+        flex-direction: column;
+    }
+
+    .title{
+        text-align: center;
+        font-size: 20px;
+    }
+  }
