--- a/src/components/perfil/Perfil.module.css
+++ b/src/components/perfil/Perfil.module.css
@@ -3,9 +3,9 @@
     align-items: center;
     justify-content: center;
     position: relative;
-    width: 100%;
     height: 100vh;
-    margin: 0 auto;
+    margin: 0 10px 0 10px;
+    border-radius: 10px 10px 0 0;
     background: #ffffff;
 }
 
@@ -162,4 +162,212 @@
 .btn:hover {
     background-color: #4894a0;
     transform: scale(0.95);
+}
+
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    height: 100vh;
+    margin: 0 10px 0 10px;
+    border-radius: 10px 10px 0 0;
+    background: #ffffff;
+}
+
+.title {
+    text-align: center;
+    margin: 0 auto;
+    position: relative;
+    top: 100px;
+    z-index: 1;
+}
+
+.contactItem {
+    justify-content: center;
+    padding: 20px;
+    text-decoration: none;
+    transition: color 0.3s ease;
+    display: flex;
+    align-items: center;
+    color: #2e8e9c;
+}
+
+.contactItem:hover {
+    color: #636363;
+}
+
+.icon {
+    margin-right: 10px;
+    color: #2e8e9c;
+}
+
+.content {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.neonShapes {
+    position: absolute;
+    top: 220px;
+    left: 185px;
+    width: 30%;
+    height: 39%;
+    overflow: hidden;
+    border-radius: 3%;
+}
+
+.neonShapes::before {
+    content: '';
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 50%;
+    height: 10px;
+    background-color: #2e8e9c;
+    box-shadow: 0 0 15px #5c9ba5;
+}
+
+.neonShapes::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 100%;
+    width: 10px;
+    height: 100%;
+    background-color: #2e8e9c;
+    box-shadow: 0 0 15px #5c9ba5;
+}
+
+.neonInverted {
+    position: absolute;
+    top: 155px;
+    left: 760px;
+    width: 25%;
+    height: 30%;
+    overflow: hidden;
+    border-radius: 3%;
+}
+
+.neonInverted::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 100%;
+    width: 100%;
+    height: 100%;
+    background-color: #2e8e9c;
+    box-shadow: 0 0 15px #5c9ba5;
+}
+
+.neonInverted::after {
+    content: '';
+    position: absolute;
+    top: -6%;
+    right: -80px;
+    width: 100%;
+    height: 10px;
+    background-color: #2e8e9c;
+    box-shadow: 0 0 15px #5c9ba5;
+}
+
+.picture {
+    width: 200px;
+    height: 250px;
+    margin-right: 15px;
+    overflow: hidden;
+    border-radius: 3%;
+}
+
+.picture img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+.description {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    width: 50%;
+    height: 270px;
+    text-align: justify;
+}
+
+.description p {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+    color: #141010;
+    z-index: 1;
+}
+
+.btn {
+    background: #2e8e9c;
+    border-radius: 5px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 30px;
+    border: none;
+    color: #ececec;
+    cursor: pointer;
+    transition: transform 0.3s ease, background-color 0.3s ease;
+    z-index: 1;
+}
+
+.btn:hover {
+    background-color: #4894a0;
+    transform: scale(0.95);
+}
+
+@media only screen and (max-width: 767px) {
+    .container {
+        flex-direction: column;
+    }
+
+    .content {
+        flex-direction: column;
+    }
+
+    .title {
+        top: 0;
+        margin-bottom: 50px;
+    }
+
+    .picture {
+        width: 150px;
+        height: 200px;
+        margin-right: 0;
+        margin-bottom: 15px;
+    }
+
+    .description {
+        align-items: center;
+        width: 95%;
+        height: auto;
+        text-align: center;
+    }
+
+    .description p {
+        font-size: 16px;
+        line-height: 20px;
+    }
+
+    .btn {
+        line-height: 24px;
+    }
+
+    .neonShapes .neonInverted{
+        display: none;
+    }
 }
