--- a/src/components/skills/Skills.module.css
+++ b/src/components/skills/Skills.module.css
@@ -1,17 +1,24 @@
 .container {
-  width: 100%;
   height: 100vh;
-  margin: 0 auto;
+  margin: 0 10px;
   background: #f7f7f7;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding-top: 20px;
+  box-sizing: border-box;
+}
+
+.title {
+  text-align: center;
+  margin-bottom: 20px;
 }
 
 .containerGrid {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  grid-gap: 15px;
+  grid-gap: 30px;
   justify-items: center;
   align-items: center;
 }
@@ -28,18 +35,164 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
+  border-radius: 10%;
+  width: 130px;
+  height: 130px;
   margin-bottom: 10px;
-  border: 1px solid #2e8e9c;
+  flex-direction: column;
+}
+
+.iconContainer:hover>svg {
+  transform: scale(1.4);
+  transition: transform 0.3s ease-in-out;
 }
 
 .iconContainer svg {
-  height: 50%;
-  width: 50%;
+  height: 40%;
+  width: 40%;
+  margin-bottom: 10px;
 }
 
 .name {
   text-align: center;
+}
+
+.technologyContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  flex-wrap: wrap;
+}
+
+.technologyItem {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-right: 20px;
+  margin-bottom: 20px;
+}
+
+.load {
+  width: 100px;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 10px;
+  border: 5px solid transparent;
+  border-radius: 50%;
+}
+
+.rotateAnimation {
+  animation: rotate 2s linear infinite;
+}
+
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+@-webkit-keyframes rotate {
+  from {
+    -webkit-transform: rotate(0deg);
+  }
+
+  to {
+    -webkit-transform: rotate(360deg);
+  }
+}
+
+.icon {
+  width: 50px;
+  height: 50px;
+}
+
+@media only screen and (max-width: 767px) {
+
+  .containerGrid {
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 10px;
+  }
+
+  .technologyItem {
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
+
+  .iconContainer {
+    width: 70px;
+    height: 70px;
+  }
+
+  .name {
+    font-size: 10px;
+  }
+
+  .load {
+    width: 60px;
+    height: 60px;
+    position: relative;
+    top: 50px;
+  }
+}
+
+@media only screen and (min-width: 320px) {
+  .containerGrid {
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 8px;
+  }
+
+  .iconContainer {
+    width: 70px;
+    height: 70px;
+  }
+
+  .name {
+    font-size: 10px;
+  }
+
+  .icon{
+    width: 30px;
+    height: 30px;
+  }
+
+  .technologyContainer{
+    padding: 5px;
+  }
+
+  .load {
+    width: 60px;
+    height: 60px;
+    position: relative;
+    top: 50px;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+  .containerGrid {
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 20px;
+  }
+
+  .iconContainer {
+    width: 150px;
+    height: 150px;
+  }
+
+  .name {
+    font-size: 14px;
+  }
+
+  .load {
+    width: 90px;
+    height: 90px;
+    position: relative;
+    top: 0;
+  }
 }
