--- a/src/components/home/Home.module.css
+++ b/src/components/home/Home.module.css
@@ -6,7 +6,7 @@
   height: 100vh;
 }
 
-.subtitle {
+.content {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -35,6 +35,7 @@
 .title {
   display: flex;
   align-items: center;
+  z-index: 1;
 }
 
 .title h2 {
@@ -61,15 +62,15 @@
   margin-top: 10px;
 }
 
-@media only screen and (max-width: 767px) {
+@media only screen and (min-width: 320px) and (max-width: 480px) {
 
   .home h1 {
-    font-size: 62px;
+    font-size: 55px;
     line-height: 45px;
   }
 
-  .subtitle {
-    width: 100%;
+  .content {
+    width: 90%;
     padding: 10px;
     align-items: center;
     text-align: center;
@@ -92,4 +93,12 @@
   .title h2 {
     font-size: 15px;
   }
+}
+
+@media only screen and (min-width: 481px) and (max-width: 766px) {
+
+  .content{
+    width: 90%;
+  }
+
 }
