--- a/src/components/perfil/Perfil.module.css
+++ b/src/components/perfil/Perfil.module.css
@@ -1,20 +1,106 @@
-.container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
+.wrapper {
     height: 100vh;
     margin: 0 10px 0 10px;
     border-radius: 10px 10px 0 0;
     background: #ffffff;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
 .title {
     text-align: center;
     margin: 0 auto;
-    position: relative;
-    top: 100px;
+}
+
+.contactItem {
+    justify-content: center;
+    padding: 20px;
+    text-decoration: none;
+    transition: color 0.3s ease;
+    display: flex;
+    align-items: center;
+    color: #2e8e9c;
+}
+
+.contactItem:hover {
+    color: #636363;
+}
+
+.icon {
+    margin-right: 10px;
+    color: #2e8e9c;
+}
+
+.content {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.picture {
+    width: 200px;
+    height: 250px;
+    margin-right: 15px;
+    overflow: hidden;
+    border-radius: 3%;
+}
+
+.picture img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+.description {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    width: 50%;
+    height: 270px;
+    text-align: justify;
+}
+
+.description p {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+    color: #141010;
     z-index: 1;
+}
+
+.btn {
+    background: #2e8e9c;
+    border-radius: 5px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 30px;
+    border: none;
+    color: #ececec;
+    cursor: pointer;
+    transition: transform 0.3s ease, background-color 0.3s ease;
+    z-index: 1;
+}
+
+.btn:hover {
+    background-color: #4894a0;
+    transform: scale(0.95);
 }
 
 .contactItem {
@@ -164,191 +250,30 @@
     transform: scale(0.95);
 }
 
-.container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    height: 100vh;
-    margin: 0 10px 0 10px;
-    border-radius: 10px 10px 0 0;
-    background: #ffffff;
-}
+@media only screen and (max-width: 480px) {
 
-.title {
-    text-align: center;
-    margin: 0 auto;
-    position: relative;
-    top: 100px;
-    z-index: 1;
-}
+    .wrapper {
+        height: auto;
+        padding: 30px;
+    }
 
-.contactItem {
-    justify-content: center;
-    padding: 20px;
-    text-decoration: none;
-    transition: color 0.3s ease;
-    display: flex;
-    align-items: center;
-    color: #2e8e9c;
-}
-
-.contactItem:hover {
-    color: #636363;
-}
-
-.icon {
-    margin-right: 10px;
-    color: #2e8e9c;
-}
-
-.content {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-}
-
-.neonShapes {
-    position: absolute;
-    top: 220px;
-    left: 185px;
-    width: 30%;
-    height: 39%;
-    overflow: hidden;
-    border-radius: 3%;
-}
-
-.neonShapes::before {
-    content: '';
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 50%;
-    height: 10px;
-    background-color: #2e8e9c;
-    box-shadow: 0 0 15px #5c9ba5;
-}
-
-.neonShapes::after {
-    content: '';
-    position: absolute;
-    top: 0;
-    right: 100%;
-    width: 10px;
-    height: 100%;
-    background-color: #2e8e9c;
-    box-shadow: 0 0 15px #5c9ba5;
-}
-
-.neonInverted {
-    position: absolute;
-    top: 155px;
-    left: 760px;
-    width: 25%;
-    height: 30%;
-    overflow: hidden;
-    border-radius: 3%;
-}
-
-.neonInverted::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 100%;
-    width: 100%;
-    height: 100%;
-    background-color: #2e8e9c;
-    box-shadow: 0 0 15px #5c9ba5;
-}
-
-.neonInverted::after {
-    content: '';
-    position: absolute;
-    top: -6%;
-    right: -80px;
-    width: 100%;
-    height: 10px;
-    background-color: #2e8e9c;
-    box-shadow: 0 0 15px #5c9ba5;
-}
-
-.picture {
-    width: 200px;
-    height: 250px;
-    margin-right: 15px;
-    overflow: hidden;
-    border-radius: 3%;
-}
-
-.picture img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
-}
-
-.description {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    width: 50%;
-    height: 270px;
-    text-align: justify;
-}
-
-.description p {
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 22px;
-    color: #141010;
-    z-index: 1;
-}
-
-.btn {
-    background: #2e8e9c;
-    border-radius: 5px;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 15px;
-    line-height: 30px;
-    border: none;
-    color: #ececec;
-    cursor: pointer;
-    transition: transform 0.3s ease, background-color 0.3s ease;
-    z-index: 1;
-}
-
-.btn:hover {
-    background-color: #4894a0;
-    transform: scale(0.95);
-}
-
-@media only screen and (max-width: 767px) {
     .container {
         flex-direction: column;
+    }
+
+    .title {
+        font-size: 18px;
+        margin-bottom: 10px;
     }
 
     .content {
         flex-direction: column;
     }
 
-    .title {
-        top: 0;
-        margin-bottom: 50px;
-    }
-
     .picture {
-        width: 150px;
-        height: 200px;
+        width: 100px;
+        height: 120px;
         margin-right: 0;
-        margin-bottom: 15px;
     }
 
     .description {
@@ -359,15 +284,162 @@
     }
 
     .description p {
-        font-size: 16px;
+        font-size: 15px;
         line-height: 20px;
+    }
+
+    .contactItem {
+        font-size: 12px;
+        padding: 12px;
     }
 
     .btn {
         line-height: 24px;
+        padding: 5px;
+    }
+}
+
+@media only screen and (min-width: 481px) and (max-width: 767px) {
+
+    .wrapper {
+        height: auto;
+        padding: 30px;
     }
 
-    .neonShapes .neonInverted{
+    .container {
+        flex-direction: column;
+        height: auto;
+    }
+
+    .title{
+        margin-bottom: 10px;
+    }
+
+    .contactItem {
+        font-size: 16px;
+        padding: 15px;
+    }
+
+    .picture {
+        width: 180px;
+        height: 215px;
+    }
+
+    .description {
+        font-size: 15px;
+        height: auto;
+        align-items: center;
+        width: 95%;
+        height: auto;
+        text-align: center;
+    }
+
+    .content {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .btn {
+        padding: 10px 20px;
+    }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 834px) {
+
+    .wrapper {
+        height: auto;
+        padding: 30px;
+    }
+
+    .container {
+        padding: 30px;
+        flex-direction: column;
+        height: 100%;
+    }
+
+    .content {
+        width: 100%;
+    }
+
+    .title {
+        margin-bottom: 10px;
+
+    }
+
+    .contactItem {
+        font-size: 18px;
+        padding: 20px;
+    }
+
+    .picture {
+        width: 200px;
+        height: 235px;
+    }
+
+    .description {
+        font-size: 25px;
+        height: auto;
+        align-items: center;
+        width: 95%;
+        height: auto;
+        text-align: center;
+    }
+
+    .btn {
+        font-size: 18px;
+        padding: 12px 24px;
+    }
+}
+
+@media only screen and (min-width: 835px) and (max-width: 1114px) {
+
+    .wrapper {
+        height: auto;
+        padding: 30px;
+    }
+
+    .container {
+        flex-direction: column;
+        height: auto;
+    }
+
+    .title {
+        margin-bottom: 20px;
+    }
+
+    .content {
+        width: 100%;
+    }
+
+    .contactItem {
+        font-size: 20px;
+        padding: 25px;
+        width: 100%;
+    }
+
+    .picture {
+        width: 200px;
+        height: 250px;
+    }
+
+    .description {
+        font-size: 22px;
+        height: auto;
+        align-items: center;
+        width: 95%;
+        height: auto;
+        text-align: center;
+    }
+
+    .btn {
+        font-size: 20px;
+        padding: 14px 28px;
+    }
+}
+
+@media only screen and (width: 320px) {
+
+    .picture {
         display: none;
     }
 }
