--- a/src/components/skills/Skills.module.css
+++ b/src/components/skills/Skills.module.css
@@ -42,19 +42,20 @@
   flex-direction: column;
 }
 
-.iconContainer:hover>svg {
-  transform: scale(1.4);
-  transition: transform 0.3s ease-in-out;
-}
-
 .iconContainer svg {
   height: 40%;
   width: 40%;
   margin-bottom: 10px;
 }
 
+.iconContainer:hover > svg {
+  transform: scale(1.4);
+  transition: transform 0.3s ease-in-out;
+}
+
 .name {
   text-align: center;
+  cursor: default;
 }
 
 .technologyContainer {
@@ -74,37 +75,34 @@
 }
 
 .load {
+  position: relative;
   width: 100px;
   height: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
   margin-bottom: 10px;
-  border: 5px solid transparent;
-  border-radius: 50%;
+ 
 }
 
-.rotateAnimation {
-  animation: rotate 2s linear infinite;
+.rotateContainer {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 5px solid transparent;
+  border-radius: 50%;
+  animation: rotate 10s linear infinite;
 }
 
 @keyframes rotate {
   from {
     transform: rotate(0deg);
   }
-
   to {
     transform: rotate(360deg);
-  }
-}
-
-@-webkit-keyframes rotate {
-  from {
-    -webkit-transform: rotate(0deg);
-  }
-
-  to {
-    -webkit-transform: rotate(360deg);
   }
 }
 
@@ -113,41 +111,21 @@
   height: 50px;
 }
 
-@media only screen and (max-width: 767px) {
 
-  .containerGrid {
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 10px;
+@media only screen and (max-width: 480px) {
+  .container {
+    height: auto;
   }
 
-  .technologyItem {
-    margin-right: 0;
-    margin-bottom: 20px;
-  }
-
-  .iconContainer {
-    width: 70px;
-    height: 70px;
-  }
-
-  .name {
-    font-size: 10px;
-  }
-
-  .load {
-    width: 60px;
-    height: 60px;
-    position: relative;
-    top: 50px;
-  }
-}
-
-@media only screen and (min-width: 320px) {
   .containerGrid {
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 8px;
   }
 
+  .title{
+    font-size: 18px;
+  }
+
   .iconContainer {
     width: 70px;
     height: 70px;
@@ -157,32 +135,67 @@
     font-size: 10px;
   }
 
-  .icon{
+  .icon {
     width: 30px;
     height: 30px;
   }
 
-  .technologyContainer{
-    padding: 5px;
+  .technologyContainer {
+    padding: 0px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  .technologyItem{
+    margin-right: 0;
   }
 
   .load {
     width: 60px;
     height: 60px;
     position: relative;
-    top: 50px;
   }
 }
 
-@media only screen and (min-width: 768px) and (max-width: 1024px) {
+@media only screen and (min-width: 481px) and (max-width: 767px) {
+  .container {
+    height: auto;
+  }
+
   .containerGrid {
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 20px;
+    grid-template-columns: repeat(3, 1fr);
   }
 
   .iconContainer {
-    width: 150px;
-    height: 150px;
+    width: 100px;
+    height: 100px;
+  }
+
+  .name {
+    font-size: 12px;
+  }
+
+  .load {
+    width: 70px;
+    height: 70px;
+    position: relative;
+    top: 0;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+
+  .container {
+    height: auto;
+  }
+
+  .containerGrid {
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  .iconContainer {
+    width: 130px;
+    height: 130px;
   }
 
   .name {
@@ -192,6 +205,56 @@
   .load {
     width: 90px;
     height: 90px;
+    position: relative;
+    top: 0;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1200px) {
+
+  .container{
+    height: auto;
+  }
+
+  .containerGrid {
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  .iconContainer {
+    width: 150px;
+    height: 150px;
+  }
+
+  .name {
+    font-size: 16px;
+  }
+
+  .load {
+    width: 100px;
+    height: 100px;
+    position: relative;
+    top: 0;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+
+  .containerGrid {
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  .iconContainer {
+    width: 150px;
+    height: 150px;
+  }
+
+  .name {
+    font-size: 16px;
+  }
+
+  .load {
+    width: 100px;
+    height: 100px;
     position: relative;
     top: 0;
   }
