--- a/src/components/navbar/NavBar.module.css
+++ b/src/components/navbar/NavBar.module.css
@@ -1,56 +1,130 @@
 .container {
-    position: relative;
-    width: auto;
-    height: 70px;
-    background: transparent;
-    display: flex;
-    align-items: center;
-    padding: 0 20px;
+  position: relative;
+  width: auto;
+  height: 70px;
+  background: transparent;
+  display: flex;
+  align-items: center;
+  padding: 0 20px;
 }
 
 .links {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    flex-grow: 1;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  flex-grow: 1;
 }
 
 .links a {
-    margin-left: 40px;
+  margin-left: 40px;
+  color: #ffffff;
+  text-decoration: none;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 27px;
+  position: relative;
+}
+
+.links a:hover {
+  text-decoration: none;
+}
+
+.links a:hover::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -3px;
+  width: 100%;
+  height: 2px;
+  background-color: #ffffff;
+}
+
+.nameLink {
+  color: #ffffff;
+  font-size: 24px;
+  text-decoration: none;
+  position: relative;
+  width: 150px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 2px solid #ffffff;
+}
+
+.menuIcon {
+  display: none;
+}
+
+.iconBar {
+  width: 100%;
+  height: 3px;
+  background-color: #ffffff;
+  margin-bottom: 4px;
+}
+
+.iconBar:last-child {
+  margin-bottom: 0;
+}
+
+@media only screen and (max-width: 480px) {
+  .links {
+    display: none;
+  }
+
+  .container {
+    justify-content: space-between;
+  }
+
+  .links.open {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 70px;
+    right: 20px;
+    background-color: #000000;
+    padding: 10px;
+    z-index: 2;
+  }
+
+  .links.open a {
+    margin: 0;
     color: #ffffff;
     text-decoration: none;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 700;
-    font-size: 22px;
-    line-height: 27px;
+    font-size: 18px;
+    line-height: 22px;
     position: relative;
-}
+    margin-bottom: 10px;
+  }
 
-.links a:hover {
-    text-decoration: none;
-}
-
-.links a:hover::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: -3px;
-    width: 100%;
-    height: 2px;
-    background-color: #ffffff;
-}
-
-
-.nameLink {
-    color: #ffffff;
-    font-size: 24px;
-    text-decoration: none;
-    position: relative;
-    width: 150px;
-    height: 40px;
+  .nameLink {
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 2px solid #ffffff;
+    margin: 0;
+  }
+
+  .menuIcon {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    height: 25px;
+    cursor: pointer;
+  }
+}
+
+@media only screen and (max-width: 675px) {
+
+  .nameLink {
+    width: 100px;
+    font-size: 15px;
+  }
+
 }
