--- a/src/components/experience/Experience.module.css
+++ b/src/components/experience/Experience.module.css
@@ -4,6 +4,7 @@
     height: 100vh;
     background: #ffffff;
     margin: 0 10px 0 10px;
+    border-radius: 0 0 10px 10px;
 }
 
 .btnItem {
@@ -14,6 +15,10 @@
     background-color: transparent;
     cursor: pointer;
     color: #2e8e9c;
+}
+
+.btnItem:hover{
+    color: #636363;
 }
 
 .btnItem span {
@@ -89,7 +94,6 @@
     font-family: 'Inter';
     font-style: normal;
     font-weight: 700;
-    font-size: 22px;
     line-height: 27px;
     color: #141010;
 }
@@ -106,28 +110,35 @@
 }
 
 @media only screen and (max-width: 767px) {
-    .containerItem {
-   
+
+    .containerItem{
+        flex-direction: column;
     }
-  
-    .descriptionContainer {
-     
+    .container{
+        height: 50%;
     }
-  
-    .imgContent {
-     
+
+    .content{
+        height: 50%;
     }
-  
-    .imgContent img {
-   
+    
+    .link{
+        margin: 0;
+        text-align: center;
+    }
+
+    .btnItem{
+        text-align: center;
     }
 
     .btnContainer{
-        flex-direction: column;
+        position: static;
+        gap: 5px;
     }
 
     .title{
         text-align: center;
         font-size: 20px;
+        position: static;
     }
   }
