--- a/src/components/navbar/NavBar.module.css
+++ b/src/components/navbar/NavBar.module.css
@@ -82,16 +82,17 @@
     display: flex;
     flex-direction: column;
     position: absolute;
-    top: 70px;
-    right: 20px;
-    background-color: #000000;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background-color: #ffffff;
     padding: 10px;
     z-index: 2;
   }
 
   .links.open a {
     margin: 0;
-    color: #ffffff;
+    color: #2e8e9c;
     text-decoration: none;
     font-family: 'Inter';
     font-style: normal;
