--- a/src/components/skills/Skills.module.css
+++ b/src/components/skills/Skills.module.css
@@ -46,11 +46,16 @@
   height: 40%;
   width: 40%;
   margin-bottom: 10px;
+  transition: transform 0.3s ease-in-out;
 }
 
 .iconContainer:hover > svg {
   transform: scale(1.4);
-  transition: transform 0.3s ease-in-out;
+}
+
+.iconContainer:not(:hover) > svg {
+  transition-delay: 0.3s;
+  transform: scale(1);
 }
 
 .name {
@@ -82,7 +87,21 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 10px;
- 
+  border: 5px solid #e3e3e3;;
+  border-radius: 50%;
+}
+
+.load>svg {
+  transition: transform 0.3s ease-in-out;
+}
+
+.load:hover>svg {
+  transform: scale(1.4);
+}
+
+.load:not(:hover)>svg {
+  transition-delay: 0.3s;
+  transform: scale(1);
 }
 
 .rotateContainer {
@@ -94,13 +113,14 @@
   align-items: center;
   border: 5px solid transparent;
   border-radius: 50%;
-  animation: rotate 10s linear infinite;
+  animation: rotate 5s linear infinite;
 }
 
 @keyframes rotate {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
@@ -122,7 +142,7 @@
     grid-gap: 8px;
   }
 
-  .title{
+  .title {
     font-size: 18px;
   }
 
@@ -144,9 +164,10 @@
     padding: 0px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
+    gap: 1%;
   }
 
-  .technologyItem{
+  .technologyItem {
     margin-right: 0;
   }
 
@@ -181,6 +202,10 @@
     position: relative;
     top: 0;
   }
+
+  .technologyContainer{
+    gap: 10px;
+  }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -212,7 +237,7 @@
 
 @media only screen and (min-width: 992px) and (max-width: 1200px) {
 
-  .container{
+  .container {
     height: auto;
   }
 
